:bug: Remove klant attribute from ContactMoment resource
issue: https://github.com/VNG-Realisatie/gemma-zaken/issues/1684
